--- a/templates/docs/contract_paper_unchecked.html
+++ b/templates/docs/contract_paper_unchecked.html
@@ -12,7 +12,7 @@
     </head>
 	<p style="width: 850px;" class="container">
 		<h1 style="text-align: center">  ДОГОВОР ОБ ОКАЗАНИИ ПЛАТНЫХ ОБРАЗОВАТЕЛЬНЫХ УСЛУГ</h1>
-		<p style="text-align: right">01.09.2019</p>
+		<p style="text-align: right">02.09.2019</p>
 		<div>Муниципальное автономное общеобразовательное учреждение «Гимназия №1» (в дальнейшем – Исполнитель) на основании лицензии 02 № 001846, выданной 09.11.2011г. Управлением по контролю и надзору в сфере образования
 		РБ и свидетельства о государственной аккредитации 02А01№ 0000309, выданного 20.12.2012г. Управлением по
 		контролю и надзору в сфере образования РБ в лице директора Тажиева Рифа Рахимовича, действующего на
@@ -63,19 +63,19 @@
 
 		<h4>6. Оплата услуг</h4>
 		6.1.Заказчик оплачивает услуги, указанные в разделе первом настоящего договора,<br>
-            50% до 31.10.2017г. в сумме <u>{{ course_element.course.price_per_hour }}</u> рублей за 1 час. Всего за <u>{% widthratio course_element.course.number_of_hours 2 1 %}</u> часов <u>{{ course_element.course.half_price }}</u> руб. и<br>
-            50% до 12.01.2018г. в сумме <u>{{ course_element.course.price_per_hour }}</u> рублей за 1 час. Всего за <u>{% widthratio course_element.course.number_of_hours 2 1 %}</u> часов <u>{{ course_element.course.half_price }}</u> руб.<br>
+            50% до 31.10.2019г. в сумме <u>{{ course_element.course.price_per_hour }}</u> рублей за 1 час. Всего за <u>{% widthratio course_element.course.number_of_hours 2 1 %}</u> часов <u>{{ course_element.course.half_price }}</u> руб. и<br>
+            50% до 20.01.2020г. в сумме <u>{{ course_element.course.price_per_hour }}</u> рублей за 1 час. Всего за <u>{% widthratio course_element.course.number_of_hours 2 1 %}</u> часов <u>{{ course_element.course.half_price }}</u> руб.<br>
 		Итого <u>{{ course_element.course.total_price }}</u> руб.<br>
 		6.2.Оплата производится на счет, указанный в реквизитах Исполнителя.
 
 		<h4>7. Основания изменения и расторжения договора</h4>
 		7.1.Условия, на которых заключён настоящий договор, могут быть изменены либо по соглашению сторон, либо в соответствии с действующим законодательством Российской Федерации.<br>
-		7.2.Настоящий договор, может быть, расторгнут по соглашению сторон. По инициативе одной из сторон договор может быть расторгнут по основаниям, предусмотренным действующим законодательством Российской Федерации. Помимо этого Исполнитель вправе отказаться от исполнения договора, если Заказчик нарушил сроки оплаты услуг по настоящему договору, что явно затрудняет исполнение обязательств Исполнителем и нарушает права и законные интересы обучающихся и работников Исполнителя и если Потребитель своим поведением систематически нарушает права и законные интересы других обучающихся и работников Исполнителя, расписание занятий или препятствует нормальному осуществлению образовательного процесса. Исполнитель вправе отказаться от исполнения договора, когда после двух предупреждений Потребитель не устранит нарушения. О намерении досрочно расторгнуть договор Заказчик должен предупредить Исполнителя письменно за 7 дней.<br>
+		7.2.Настоящий договор может быть расторгнут по соглашению сторон. По инициативе одной из сторон договор может быть расторгнут по основаниям, предусмотренным действующим законодательством Российской Федерации. Помимо этого Исполнитель вправе отказаться от исполнения договора, если Заказчик нарушил сроки оплаты услуг по настоящему договору, что явно затрудняет исполнение обязательств Исполнителем и нарушает права и законные интересы обучающихся и работников Исполнителя и если Потребитель своим поведением систематически нарушает права и законные интересы других обучающихся и работников Исполнителя, расписание занятий или препятствует нормальному осуществлению образовательного процесса. Исполнитель вправе отказаться от исполнения договора, когда после двух предупреждений Потребитель не устранит нарушения. О намерении досрочно расторгнуть договор Заказчик должен предупредить Исполнителя письменно за 7 дней.<br>
 		Договор считается расторгнутым со дня письменного уведомления Исполнителем Заказчика (Потребителя) об отказе от исполнения договора.<br>
 
 		<h4>8. Ответственность за неисполнение или ненадлежащее исполнение обязательств по настоящему договору</h4>
 		В случае неисполнения или ненадлежащего исполнения сторонами обязательств по настоящему договору они несут ответственность, предусмотренную гражданским законодательством и законодательством о защите прав потребителей, на условиях, установленных этим законодательством.<br>
-            Настоящий договор вступает в силу со дня его заключения сторонами и действует до 21.05.2018г. Договор составлен в двух экземплярах, имеющих равную юридическую силу.<br></div>
+            Настоящий договор вступает в силу со дня его заключения сторонами и действует до 21.05.2020г. Договор составлен в двух экземплярах, имеющих равную юридическую силу.<br></div>
 		<h4>Подписи сторон</h4>
 
         {% if data.student_document_type_txt %}
@@ -103,7 +103,7 @@
                 БИК 048082000, р/с 40701810580823000003<br>
                 ФУ администрации ГО г.Стерлитамак РБ, л/с -30503005700 Отделение – НБ Республика Башкортостан г. Уфа<br>
                 Вид услуги: дополнительная образовательная услуга<br>
-                КБК \3020104004\775\0000\130<br>
+                КБК \3020104004\775\0000\131<br>
                 Директор МАОУ «Гимназия №1»<br>
                     </td>
                 <td style="width: 3%;"></td>
@@ -176,7 +176,7 @@
                 БИК 048082000, р/с 40701810580823000003<br>
                 ФУ администрации ГО г.Стерлитамак РБ, л/с -30503005700 Отделение – НБ Республика Башкортостан г. Уфа<br>
                 Вид услуги: дополнительная образовательная услуга<br>
-                КБК \3020104004\775\0000\130<br>
+                КБК \3020104004\775\0000\131<br>
                 Директор МАОУ «Гимназия №1»<br>
                     </td>
                 <td style="width: 3%;"></td>
