--- a/templates/docs/contract_paper.html
+++ b/templates/docs/contract_paper.html
@@ -70,12 +70,12 @@
 
 		<h4>7. Основания изменения и расторжения договора</h4>
 		7.1.Условия, на которых заключён настоящий договор, могут быть изменены либо по соглашению сторон, либо в соответствии с действующим законодательством Российской Федерации.<br>
-		7.2.Настоящий договор, может быть, расторгнут по соглашению сторон. По инициативе одной из сторон договор может быть расторгнут по основаниям, предусмотренным действующим законодательством Российской Федерации. Помимо этого Исполнитель вправе отказаться от исполнения договора, если Заказчик нарушил сроки оплаты услуг по настоящему договору, что явно затрудняет исполнение обязательств Исполнителем и нарушает права и законные интересы обучающихся и работников Исполнителя и если Потребитель своим поведением систематически нарушает права и законные интересы других обучающихся и работников Исполнителя, расписание занятий или препятствует нормальному осуществлению образовательного процесса. Исполнитель вправе отказаться от исполнения договора, когда после двух предупреждений Потребитель не устранит нарушения. О намерении досрочно расторгнуть договор Заказчик должен предупредить Исполнителя письменно за 7 дней.<br>
+		7.2.Настоящий договор может быть расторгнут по соглашению сторон. По инициативе одной из сторон договор может быть расторгнут по основаниям, предусмотренным действующим законодательством Российской Федерации. Помимо этого Исполнитель вправе отказаться от исполнения договора, если Заказчик нарушил сроки оплаты услуг по настоящему договору, что явно затрудняет исполнение обязательств Исполнителем и нарушает права и законные интересы обучающихся и работников Исполнителя и если Потребитель своим поведением систематически нарушает права и законные интересы других обучающихся и работников Исполнителя, расписание занятий или препятствует нормальному осуществлению образовательного процесса. Исполнитель вправе отказаться от исполнения договора, когда после двух предупреждений Потребитель не устранит нарушения. О намерении досрочно расторгнуть договор Заказчик должен предупредить Исполнителя письменно за 7 дней.<br>
 		Договор считается расторгнутым со дня письменного уведомления Исполнителем Заказчика (Потребителя) об отказе от исполнения договора.<br>
 
 		<h4>8. Ответственность за неисполнение или ненадлежащее исполнение обязательств по настоящему договору</h4>
 		В случае неисполнения или ненадлежащего исполнения сторонами обязательств по настоящему договору они несут ответственность, предусмотренную гражданским законодательством и законодательством о защите прав потребителей, на условиях, установленных этим законодательством.<br>
-            Настоящий договор вступает в силу со дня его заключения сторонами и действует до 21.05.2018г. Договор составлен в двух экземплярах, имеющих равную юридическую силу.<br></div>
+            Настоящий договор вступает в силу со дня его заключения сторонами и действует до 21.05.2020г. Договор составлен в двух экземплярах, имеющих равную юридическую силу.<br></div>
 		<h4>Подписи сторон</h4>
 
         {% if contract.student_document %}
@@ -103,7 +103,7 @@
                 БИК 048082000, р/с 40701810580823000003<br>
                 ФУ администрации ГО г.Стерлитамак РБ, л/с -30503005700 Отделение – НБ Республика Башкортостан г. Уфа<br>
                 Вид услуги: дополнительная образовательная услуга<br>
-                КБК \3020104004\775\0000\130<br>
+                КБК \3020104004\775\0000\131<br>
                 Директор МАОУ «Гимназия №1»<br>
                     </td>
                 <td style="width: 3%;"></td>
@@ -176,7 +176,7 @@
                 БИК 048082000, р/с 40701810580823000003<br>
                 ФУ администрации ГО г.Стерлитамак РБ, л/с -30503005700 Отделение – НБ Республика Башкортостан г. Уфа<br>
                 Вид услуги: дополнительная образовательная услуга<br>
-                КБК \3020104004\775\0000\130<br>
+                КБК \3020104004\775\0000\131<br>
                 Директор МАОУ «Гимназия №1»<br>
                     </td>
                 <td style="width: 3%;"></td>
